--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -11,15 +11,13 @@ body {
 	background-color: #001900;
 	text-align: center;
 	padding: 2.5% 2.5% 2.5% 2.5%;
-	border-radius: 20px;
-	 
-
+	border-radius: 15px;
 }
 
 .navigation-item {
 	display: inline-block;
-	padding-left: 10%;
-	padding-right: 10%;
+	padding-left: 9%;
+	padding-right: 9%;
 }
 
 .navigation-link {
@@ -28,29 +26,56 @@ body {
 	font-weight: bold;
 }
 
+.navigation-link:hover {
+	font-weight: bolder;
+	text-decoration: underline;
+}
+
+.navigation-link:focus {
+	text-decoration: red;
+}
+
 .portfolio-container {
 
 }
 
 /*this media query impacts screen 780px or larger*/
-@media screen and (min-width: 780px) {
-
-	body {
-		background-color:;
+@media screen and (max-width: 780px) {
+	.navigation-menu {
+		background-color: #001900;
+	}
+	.navigation-item {
+	display: inline-block;
+	padding-left: 7%;
+	padding-right: 7%;
 	}
 }
 
 
 /*this media query impacts screen 480 or larger*/
 @media screen and (max-width: 480px) {
+	.navigation-menu {
+		background-color: #001900;
+		border-radius: 10px;
+		padding: 3% 3% 3% 3%;
+	}
+	.navigation-item {
+	display: inline-block;
+	padding-left: 5%;
+	padding-right: 5%;
+	}
 }
 
 
 /*this media query impacts screen 320 or larger*/
-@media screen and (max-width: 321px) {
+@media screen and (max-width: 320px) {
+	.navigation-menu {
+		background-color: #001900;
+		padding: 4% 4% 4% 4%;
+	}
 	.navigation-item {
-		display: inline-block;
-		padding-left: 5%;
-		padding-right: 5%;
+	display: inline-block;
+	padding-left: 2%;
+	padding-right: 2%;
 	}
 }
