--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -116,6 +116,10 @@ footer {
 		padding-right: 7%;
 	}
 
+	.navigation-link {
+		font-size: 50px;
+	}
+
 	h1 {
 		font-size: 75px;
 	}
@@ -159,6 +163,10 @@ footer {
 		display: inline-block;
 		padding-left: 5%;
 		padding-right: 5%;
+	}
+
+	.navigation-link {
+		font-size: 50px;
 	}
 
 	h1 {
