--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -1,3 +1,7 @@
+html {
+	position: relative;
+}
+
 body {
 	background-color: #006600;
 	font-family: 'Merriweather', serif; 
@@ -12,6 +16,7 @@ body {
 	text-align: center;
 	padding: 2.5% 2.5% 2.5% 2.5%;
 	border-radius: 15px;
+	border: 3.5px solid #4dff4d;
 }
 
 .navigation-item {
@@ -37,21 +42,23 @@ body {
 }
 
 .index-container {
+	position: relative;
 	margin: auto;
 	/*background-color: #99e699;
 	Can try to use this other color for content 
 	background, see what is better*/
 	background-color: #248f24;
-	width: 800px;
+	width: 60%;
 	height: 175px;
 	padding: 5% 5% 5% 5%;
 	border-radius: 7px
 }
 
 .portfolio-container {
+	position: relative;
 	margin: auto;
 	background-color: #248f24;
-	width: 800px;
+	width: 60%;
 	height: 370px;
 	padding: 5% 5% 5% 5%;
 	border-radius: 7px
@@ -108,6 +115,7 @@ footer {
 @media screen and (max-width: 780px) {
 	.navigation-menu {
 		background-color: #001900;
+		border: 5px solid #4dff4d;
 	}
 
 	.navigation-item {
@@ -130,7 +138,7 @@ footer {
 	Can try to use this other color for content 
 	background, see what is better*/
 		background-color: #248f24;
-		width: 800px;
+		width: 50%;
 		height: 220px;
 		padding: 5% 5% 5% 5%;
 		border-radius: 7px
@@ -139,7 +147,7 @@ footer {
 	.portfolio-container {
 		margin: auto;
 		background-color: #248f24;
-		width: 800px;
+		width: 50%;
 		height: 400px;
 		padding: 5% 5% 5% 5%;
 		border-radius: 7px
@@ -158,6 +166,7 @@ footer {
 		background-color: #001900;
 		border-radius: 10px;
 		padding: 3% 3% 3% 3%;
+		border: 5px solid #4dff4d;
 	}
 	.navigation-item {
 		display: inline-block;
@@ -170,7 +179,7 @@ footer {
 	}
 
 	h1 {
-		font-size: 50px;
+		font-size: 175%;
 	}
 
 	.index-container {
@@ -179,7 +188,7 @@ footer {
 	Can try to use this other color for content 
 	background, see what is better*/
 		background-color: #248f24;
-		width: 800px;
+		width: 50%;
 		height: 220px;
 		padding: 5% 5% 5% 5%;
 		border-radius: 7px
@@ -188,7 +197,7 @@ footer {
 	.portfolio-container {
 		margin: auto;
 		background-color: #248f24;
-		width: 800px;
+		width: 50%;
 		height: 400px;
 		padding: 5% 5% 5% 5%;
 		border-radius: 7px
@@ -205,6 +214,7 @@ footer {
 	.navigation-menu {
 		background-color: #001900;
 		padding: 4% 4% 4% 4%;
+		border: 8px solid #4dff4d;
 	}
 	.navigation-item {
 		display: inline-block;
@@ -217,7 +227,7 @@ footer {
 	}
 
 	h1 {
-		font-size: 25px;
+		font-size: 100%;
 	}
 
 	.index-container {
@@ -226,7 +236,7 @@ footer {
 	Can try to use this other color for content 
 	background, see what is better*/
 		background-color: #248f24;
-		width: 80%;
+		width: 50%;
 		height: 220px;
 		padding: 5% 5% 5% 5%;
 		border-radius: 7px
@@ -235,7 +245,7 @@ footer {
 	.portfolio-container {
 		margin: auto;
 		background-color: #248f24;
-		width: 80%;
+		width: 50%;
 		height: 380px;
 		padding: 5% 5% 5% 5%;
 		border-radius: 7px
