--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -66,7 +66,7 @@ strong {
 	margin: auto;
 	background-color: #48d148;
 	width: 60%;
-	height: 365px;
+	height: 1000px;
 	padding: 5% 5% 5% 5%;
 	border-radius: 7px;
 }
@@ -77,7 +77,7 @@ strong {
 	margin: auto;
 	background-color: #48d148;
 	width: 60%;
-	height: 3400px;
+	height: 3500px;
 	padding: 5% 5% 5% 5%;
 	border-radius: 7px;
 }
@@ -337,10 +337,11 @@ footer {
 	}
 
 	.portfolio-container {
+		position: relative;
 		margin: auto;
 		background-color: #248f24;
 		width: 65%;
-		height: 600px;
+		height: 90%;
 		padding: 5% 5% 5% 5%;
 		border-radius: 7px
 	}
@@ -352,8 +353,10 @@ footer {
 	}
 
 	.bio-img {
+	position: relative;
 	display: block;
-	float:;
+	float: center;
+	vertical-align: middle;
 	width: 70%;
 	height: 40%;
 	padding-top:1.5%;
@@ -362,8 +365,10 @@ footer {
 	}
 
 	.bio-content {
+	position: relative;
 	display: block;
-	float:;
+	float: center;
+	vertical-align: middle;
 	width: 60%;
 	height: 100%;
 	text-align: left;
