--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -143,18 +143,31 @@ footer {
 	border: 2px solid #4dff4d;
 }
 
-.index-content-left {
-	background: white;
-	float: left;
+.index-content-top {
+	display: block;
+	position: relative;
+	background-color: #006600;
+	margin: auto;
+	text-align: center;
 	width: 50%;
 	height: 100%;
+	padding-top: 2%;
+	padding-bottom: 2%;
+	border: 3px solid #48d148;
+	border-radius: 20%;
 }
 
-.index-content-right {
-	background-color: blue;
-	float: right;
+.index-content-bottom {
+	display: block;
+	position: relative;
+	margin: auto;
 	width: 50%;
 	height: 100%;
+	text-align: center;
+}
+
+.index-email {
+	color: white;
 }
 
 .bio-img {
@@ -173,6 +186,7 @@ footer {
 	height: auto;
 	border-radius: 200px;
 	vertical-align: center;
+	padding-top: 5%;
 }
 
 .bio-content {
