--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -239,6 +239,10 @@ footer {
 	padding-top:;
 }
 
+.resume-link:hover {
+	font-weight: 900;
+}
+
 .resume-list {
 	padding-top: 2%;
 	padding-bottom: 2%;
