adjusted pics on index page, removed thesis from experience on resume

--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -175,11 +175,12 @@ footer {
 
 .index-img {
 	position: relative;
-	display: block;
+	display: block; 
 	margin: auto;
 	width: auto;
 	height: auto;
-	vertical-align:;
+	padding-top: 5%;
+	padding-left: -50%;
 }
 
 .index-email {
