--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -44,10 +44,32 @@ a:hover {
 	border: 2px solid #4dff4d;
 }
 
+.index-navigation-menu {
+	margin: auto;
+	width: 40%;
+	text-align: center;
+	padding: 1.5% 2.5% 1.5% 2.5%;
+	border-radius: 15px;
+	/*border: 2px solid #4dff4d;
+	background-color: #001900;*/
+}
+
 .navigation-item {
 	display: inline-block;
 	padding-left: 9%;
 	padding-right: 9%;
+}
+
+.index-navigation-item {
+	display:block;
+	font-size: 200%;
+	padding-top: 2%;
+	padding-bottom: 5%;
+}
+
+.index-navigation-link {
+	text-decoration: none;
+	color: green;
 }
 
 .navigation-link {
@@ -86,7 +108,7 @@ a:hover {
 	float: center;
 	margin: auto;
 	/*background-color: #48d148;*/
-	width: 60%;
+	width: 75%;
 	height: auto;
 	padding: 5% 5% 5% 5%;
 	border-radius: 7px;
@@ -207,6 +229,11 @@ footer {
 	padding-top: 5%;
 }
 
+.bio-img2 {
+	display: block;
+
+}
+
 .bio-link {
 	padding-left: 5%;
 }
@@ -218,6 +245,20 @@ footer {
 	height: 360px;
 	text-align: left;
 	background-color: white;*/
+}
+
+.resume-img {
+	display: inline-block;
+	width: 20%;
+	height: auto;
+	padding-right: 4%;	
+}
+
+.resume-img-container {
+	width: 100%;
+	height: auto;
+	text-align: center;
+	padding-bottom: 1.5%;
 }
 
 .resume-headline {
@@ -262,12 +303,12 @@ footer {
 
 .project-link {
 	position: relative;
-	display: block;
-	text-align: center;
+	display: inline-block;
+	text-align: left;
 	background-color:;
 	color: black;
 	font-size: 130%;
-	padding: 5% 5% 5% 5%;
+	padding: 1% 3% 1% 1%;
 }
 
 .project-content {
@@ -277,6 +318,10 @@ footer {
 	background-color:;
 }
 
+.project-img {
+	width: 50%;
+	height: auto;
+}
 
 
 
