--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -243,11 +243,11 @@ footer {
 	background-color: white;*/
 }
 
-span {
+.bio-span {
 	font-weight: bold;
 }
 
-span:hover {
+.bio-span:hover {
 	font-weight: normal;
 	border: 1px solid black;
 }
@@ -341,13 +341,18 @@ span:hover {
 	margin:;
 	width: auto;
 	text-align:;
-	padding: 1% 1% 1% 1%;
+	padding: 2% 0% 1% 5%;
 	border-radius: 20px;
 	border: 1px solid white;
 
 }
 
-
+h4 {
+	display: inline-block;
+	padding-left: 2%;
+	padding-top: 1%;
+	text-align: center;
+}
 
 
 
