resume sub heading reformatting

--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -306,6 +306,10 @@ footer {
 	letter-spacing: 1.5px;
 }
 
+.sub-head-list {
+	padding-left: 2%;
+}
+
 .project-link {
 	position: relative;
 	display: inline-block;
