--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -339,13 +339,18 @@ footer {
 }
 
 .project-menu {
+	text-align: left;
+
+}
+
+.project-menu-item {
 	display: inline-block;
 	position: relative;
 	text-decoration: none;
 	margin:;
 	width: auto;
-	text-align:;
-	padding: 2% 0% 1% 5%;
+	text-align: left;
+	padding:;
 	border-radius: 20px;
 	border: 1px solid white;
 
@@ -353,9 +358,10 @@ footer {
 
 h4 {
 	display: inline-block;
-	padding-left: 2%;
+	padding-bottom: 2%;
 	padding-top: 1%;
 	text-align: center;
+	font-weight: bold;
 }
 
 
