--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -210,6 +210,13 @@ footer {
 	width: auto;
 }
 
+
+
+
+
+
+
+
 .bio-img {
 	/*display: inline-block;
 	float: left;
@@ -251,6 +258,13 @@ footer {
 	font-weight: normal;
 	border: 1px solid black;
 }
+
+
+
+
+
+
+
 
 .resume-img {
 	display: inline-block;
@@ -310,6 +324,13 @@ footer {
 	padding-left: 2%;
 }
 
+
+
+
+
+
+
+
 .project-link {
 	position: relative;
 	display: inline-block;
@@ -339,7 +360,12 @@ footer {
 }
 
 .project-menu {
-	text-align: left;
+	text-align: center;
+	border: 2px solid black;
+	margin: auto;
+	width: 40%;
+	padding-bottom: 2%;
+	padding-top: 2%;
 
 }
 
@@ -349,19 +375,20 @@ footer {
 	text-decoration: none;
 	margin:;
 	width: auto;
-	text-align: left;
-	padding:;
+	text-align: center;
+	padding-bottom: 2%;
+	padding-top: 2%;
 	border-radius: 20px;
 	border: 1px solid white;
 
 }
 
 h4 {
-	display: inline-block;
-	padding-bottom: 2%;
+	display: block;
+	padding-bottom: 1%;
 	padding-top: 1%;
-	text-align: center;
 	font-weight: bold;
+	text-align: center;
 }
 
 
