got rid of box around projects page nav

--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -361,7 +361,7 @@ footer {
 
 .project-menu {
 	text-align: center;
-	border: 2px solid black;
+	/*border: 2px solid black;*/
 	margin: auto;
 	width: 40%;
 	padding-bottom: 2%;
