--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -361,7 +361,7 @@ footer {
 
 .project-menu {
 	text-align: center;
-	/*border: 2px solid black;*/
+	border: 2px solid black;
 	margin: auto;
 	width: 40%;
 	padding-bottom: 2%;
@@ -376,8 +376,8 @@ footer {
 	margin:;
 	width: auto;
 	text-align: center;
-	padding-bottom: 4%;
-	padding-top: 4%;
+	padding-bottom: 5%;
+	padding-top: 5%;
 	border-radius: 20px;
 	border: 1px solid white;
 
