projects nav pane

--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -361,41 +361,28 @@ footer {
 	margin: auto;
 }
 
-.project-menu {
-	text-align: center;
-	border: 2px solid black;
+.project-navigation-item {
+	display:block;
+	font-size: 200%;
+	padding-top: 2%;
+	padding-bottom: 5%;
+	line-height: 100%;
+}
+
+.project-navigation-link {
+	text-decoration: none;
+	color: green;
+}
+
+.project-navigation-menu {
 	margin: auto;
 	width: 40%;
-	padding-bottom: 2%;
-	padding-top: 2%;
-
-}
-
-.project-menu-item {
-	display: inline-block;
-	position: relative;
-	text-decoration: none;
-	margin:;
-	width: auto;
 	text-align: center;
-	padding-bottom: 5%;
-	padding-top: 5%;
-	border-radius: 20px;
-	border: 1px solid white;
-
+	padding: 1.5% 2.5% 1.5% 2.5%;
+	border-radius: 15px;
+	border: 2px solid #4dff4d;
+	background-color: #001900;
 }
-
-h4 {
-	display: block;
-	padding-bottom: 1%;
-	padding-top: 1%;
-	font-weight: bold;
-	text-align: center;
-}
-
-
-
-
 
 
 
