--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -375,9 +375,9 @@ footer {
 }
 
 .project-navigation-menu {
-	margin: auto;
+	margin:;
 	width: 40%;
-	text-align: center;
+	text-align: left;
 	padding: 1.5% 2.5% 1.5% 2.5%;
 	border-radius: 15px;
 	border: 2px solid #4dff4d;
