--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -124,6 +124,7 @@ h1 {
 	letter-spacing: 15px;
 	padding-top: 8%;
 	padding-bottom: 8%;
+	line-height: 100%;
 }
 
 h2 {
@@ -133,6 +134,7 @@ h2 {
 	font-style: italic;
 	letter-spacing: 5px;
 	padding-bottom: 5px;
+	line-height: 100%;
 }
 
 h3 {
@@ -142,6 +144,7 @@ h3 {
 	font-weight: bold;
 	padding-top: 10%;
 	padding-bottom: .5%;
+	line-height: 100%;
 
 }
 
