--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -384,17 +384,17 @@ footer {
 
 .project-navigation-link {
 	text-decoration: none;
-	color: white;
+	color: green;
 }
 
 .project-navigation-menu {
-	margin: auto;
-	width: 40%;
-	text-align: center;
+	margin:;
+	width: auto;
+	text-align: left;
 	padding: 1.5% 2.5% 1.5% 2.5%;
 	border-radius: 15px;
-	border: 2px solid #4dff4d;
-	background-color: #001900;
+	/*border: 2px solid #4dff4d;
+	background-color: #001900;*/
 }
 
 
