--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -15,7 +15,7 @@ strong {
 }
 
 hr {
-	margin-bottom: 3%;
+	margin-bottom: 1%;
 }
 
 p {
@@ -109,7 +109,7 @@ a:hover {
 	float: center;
 	margin: auto;
 	/*background-color: #48d148;*/
-	width: 75%;
+	width: 70%;
 	height: auto;
 	padding: 5% 5% 5% 5%;
 	border-radius: 7px;
@@ -270,6 +270,17 @@ footer {
 
 
 
+.resume-section-buffer-top {
+	display: block;
+	padding-top: 15%;
+}
+
+.resume-section-buffer {
+	display: block;
+	padding-top: 15%;
+	padding-bottom:;
+}
+
 .resume-img {
 	display: inline-block;
 	width: 20%;
@@ -288,7 +299,7 @@ footer {
 	display: block;
 	font-weight: bold;
 	text-align: center;
-	padding-top: 2%;
+	padding-top: 1%;
 	padding-bottom: 1%;
 	line-height: 100%;
 }
