--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -235,9 +235,10 @@ footer {
 	margin-left: auto;
 	width: 25%;
 	height: auto;
-	border-radius:100%;
+	border-radius: 10%;
 	vertical-align: center;
-	padding-top: 5%;
+	padding-top:;
+	box-shadow: 10px 10px 5px #888888; 
 }
 
 .bio-link {
