centering nav menu

--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -466,7 +466,7 @@ footer {
 .project-navigation-menu {
 	margin:;
 	width: auto;
-	text-align: left;
+	text-align: center;
 	padding: 1.5% 2.5% 1.5% 2.5%;
 	border-radius: 15px;
 	/*border: 2px solid #4dff4d;
