--- a/portfolio/portfolio-final/css/style.css
+++ b/portfolio/portfolio-final/css/style.css
@@ -286,9 +286,9 @@ footer {
 
 .resume-img {
 	display: inline-block;
-	width: 20%;
+	width: 40%;
 	height: auto;
-	padding-right: 4%;	
+	padding-right:;	
 }
 
 .resume-img-container {
